--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
     <!-- Header Section -->
     <header>
         <nav>
-            <a href="./index.html" class="logo">WebStudio</a>
-
+            <a href="./index.html" class="logo-link">
+                Web<span class="logo-span">Studio</span>
+            </a>
             <ul class="menu">
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="./index.html" class="menu-link">Studio</a></li>
+                <li><a href="#" class="menu-link">Portfolio</a></li>
+                <li><a href="#" class="menu-link">Contacts</a></li>
             </ul>
         </nav>
-        <address class="contact-info">
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="contact-address">
+            <ul class="contact-list">
+                <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
