--- a/index.html
+++ b/index.html
@@ -96,37 +96,37 @@
             </ul>
         </section>
         <!-- Portfolio Section -->
-        <section class="portfolio container">
-            <h2>Our Portfolio</h2>
+        <section class="portfolio-container">
+            <h2 class="portfolio-heading">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
                     <img src="./images/banking-app.jpg" alt="Banking App" width="360">
-                    <h3>Banking App</h3>
+                    <h3 class="portfolio-title">Banking App</h3>
                     <p>App</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                    <h3>Cashless Payment</h3>
+                    <h3 class="portfolio-title">Cashless Payment</h3>
                     <p>Marketing</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/meditation-app.jpg" alt="Meditation App" width="360">
-                    <h3>Meditation App</h3>
+                    <h3 class="portfolio-title">Meditation App</h3>
                     <p>App</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360">
-                    <h3>Taxi Service</h3>
+                    <h3 class="portfolio-title">Taxi Service</h3>
                     <p>Marketing</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
-                    <h3>Screen Illustrations</h3>
+                    <h3 class="portfolio-title">Screen Illustrations</h3>
                     <p>Design</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/online-courses.jpg" alt="Online Courses" width="360">
-                    <h3>Online Courses</h3>
+                    <h3 class="portfolio-title">Online Courses</h3>
                     <p>Marketing</p>
                 </li>
             </ul>
@@ -134,9 +134,10 @@
     </main>
 
     <!-- Footer Section -->
-    <footer>
-        <a href="./index.html" class="logo">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer-container">
+        <a href="./index.html" class="logo-link">Web<span class="logo-span">Studio</span></a>
+        <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </footer>
 
 </body>
