First section and third section

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <!-- Main Section -->
     <main>
         <!-- Hero Section -->
-        <section class="hero">
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button" class="btn">Order Service</button>
+        <section class="hero-section">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero-btn">Order Service</button>
         </section>
 
         <!-- Services Section -->
