--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
         </section>
 
         <!-- Our Team Section -->
-        <section class="team">
-            <h2>Our Team</h2>
+        <section class="team-section">
+            <h2 class="team-heading">Our Team</h2>
             <ul class="team-list">
-                <li>
+                <li class="team-item">
                     <img src="./images/team-member-1.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-title">Mark Guerrero</h3>
+                    <p class="team-description">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/team-member-2.jpg" alt="Tom Ford" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-title">Tom Ford</h3>
+                    <p class="team-description">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/team-member-3.jpg" alt="Camila Garcia" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-title">Camila Garcia</h3>
+                    <p class="team-description">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/team-member-4.jpg" alt="Daniel Wilson" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-title">Daniel Wilson</h3>
+                    <p class="team-description">UI Designer</p>
                 </li>
             </ul>
         </section>
