--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </a>
             <ul class="menu">
                 <li><a href="./index.html" class="menu-link">Studio</a></li>
-                <li><a href="#" class="menu-link">Portfolio</a></li>
-                <li><a href="#" class="menu-link">Contacts</a></li>
+                <li><a href="" class="menu-link">Portfolio</a></li>
+                <li><a href="" class="menu-link">Contacts</a></li>
             </ul>
         </nav>
         <address class="contact-address">
@@ -47,23 +47,23 @@
             <h2>Services</h2>
             <ul class="services-list">
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative
+                    <h3 class="h-service">Strategy</h3>
+                    <p class="service">Our goal is to identify the business problem to walk away with the perfect and creative
                         solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="h-service">Punctuality</h3>
+                    <p class="service">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and
+                    <h3 class="h-service">Diligence</h3>
+                    <p class="service">Research and confirm brands that present the strongest digital growth opportunities and
                         minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="h-service">Technologies</h3>
+                    <p class="service">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -102,7 +102,7 @@
                 <li class="portfolio-item">
                     <img src="./images/banking-app.jpg" alt="Banking App" width="360">
                     <h3 class="portfolio-title">Banking App</h3>
-                    <p>App</p>
+                    <p class="portfolio-description">App</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
@@ -112,7 +112,7 @@
                 <li class="portfolio-item">
                     <img src="./images/meditation-app.jpg" alt="Meditation App" width="360">
                     <h3 class="portfolio-title">Meditation App</h3>
-                    <p>App</p>
+                    <p class="portfolio-description">App</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360">
