--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <li class="portfolio-item">
                     <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
                     <h3 class="portfolio-title">Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio-description">Marketing</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/meditation-app.jpg" alt="Meditation App" width="360">
@@ -117,17 +117,17 @@
                 <li class="portfolio-item">
                     <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360">
                     <h3 class="portfolio-title">Taxi Service</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio-description">Marketing</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="portfolio-title">Screen Illustrations</h3>
-                    <p>Design</p>
+                    <p class="portfolio-description">Design</p>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/online-courses.jpg" alt="Online Courses" width="360">
                     <h3 class="portfolio-title">Online Courses</h3>
-                    <p>Marketing</p>
+                    <p class="portfolio-description">Marketing</p>
                 </li>
             </ul>
         </section>
